<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_screen_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/my_movie"
            app:titleTextColor="@color/white" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:src="@drawable/ic_movie_icon" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            app:layout_constraintLeft_toRightOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/poster"
            android:id="@+id/favorite"
            android:src="@drawable/ic_star_outline"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/year_layout"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/poster"
            app:layout_constraintBottom_toTopOf="@id/plot_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:text="@string/year" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:id="@+id/year"
                android:layout_margin="5dp"
                android:layout_weight="0.7"
                android:text="@string/year" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mpaa_layout"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/year_layout"
            app:layout_constraintBottom_toTopOf="@id/plot_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:text="@string/mpaa_rating" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:id="@+id/mpaa"
                android:layout_margin="5dp"
                android:layout_weight="0.7"
                android:text="@string/mpaa_rating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plot_layout"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/mpaa_layout"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:text="@string/plot" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:id="@+id/plot"
                android:layout_margin="5dp"
                android:layout_weight="0.7"
                android:text="@string/plot" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>